fix spacing. bigger font.

--- a/less/custom-alice.less
+++ b/less/custom-alice.less
@@ -11,3 +11,10 @@
 hr {
     border-top: 2px dashed @hr-border;
 }
+
+.carousel-control, .carousel-indicators {
+    display: none;
+}
+.carousel-control.left, .carousel-control.right {
+        background-image: none
+}
