--- a/less/variables.less
+++ b/less/variables.less
@@ -45,16 +45,16 @@
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
-@font-size-base:          16px;
+@font-size-base:          20px; // 16px;
 @font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
 @font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
 
-@font-size-h1:            floor((@font-size-base * 2.6)); // ~36px
-@font-size-h2:            floor((@font-size-base * 2.15)); // ~30px
-@font-size-h3:            ceil((@font-size-base * 1.7)); // ~24px
-@font-size-h4:            ceil((@font-size-base * 1.25)); // ~18px
-@font-size-h5:            @font-size-base;
-@font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
+@font-size-h1:            @font-size-base; // floor((@font-size-base * 2.6)); // ~36px
+@font-size-h2:            @font-size-base; // floor((@font-size-base * 2.15)); // ~30px
+@font-size-h3:            @font-size-base; // ceil((@font-size-base * 1.7)); // ~24px
+@font-size-h4:            @font-size-base; // ceil((@font-size-base * 1.25)); // ~18px
+@font-size-h5:            @font-size-base; // @font-size-base;
+@font-size-h6:            @font-size-base; // ceil((@font-size-base * 0.85)); // ~12px
 
 //** Unit-less `line-height` for use in components like buttons.
 @line-height-base:        1.428571429; // 20/14
@@ -65,7 +65,7 @@
 @headings-font-family:    inherit;
 @headings-font-weight:    500;
 @headings-line-height:    1.1;
-@headings-color:          @brand-warning;
+@headings-color:          @brand-primary;
 
 
 //== Iconography
@@ -336,10 +336,10 @@
 
 // Basics of a navbar
 @navbar-height:                    50px;
-@navbar-margin-bottom:             @line-height-computed;
+@navbar-margin-bottom:             0px; // @line-height-computed;
 @navbar-border-radius:             @border-radius-base;
 @navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
-@navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
+@navbar-padding-vertical:          0px; // ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
 @navbar-default-color:             #777;
@@ -843,7 +843,7 @@
 //##
 
 //** Horizontal line color.
-@hr-border:                   @brand-warning;
+@hr-border:                   @brand-primary;
 
 //** Horizontal offset for forms and lists.
 @component-offset-horizontal: 180px;
@@ -854,17 +854,14 @@ p {
 
 // CUSTOM
 body {
+    font-weight: 500;
+    line-height: 30px;
     padding-top:3em;
 }
 
 h1.showhide_headings {
     padding-top: 15em;
     color: @brand-primary;
-}
-
-body {
-    font-weight: 200;
-    line-height: 30px;
 }
 
 #module_10 nav.navbar {
@@ -877,6 +874,8 @@ body {
 h1, h2, h3, h4, h5, h6 {
     color: @brand-primary;
     text-transform: lowercase;
+    text-align: center;
+    font-weight: bold;
 }
 h3.panel-title {
     text-shadow: 1px 1px 2px @gray-lighter;
@@ -910,5 +909,11 @@ h3.panel-title {
 
 #module_7 .navbar-collapse {
     text-align: center;
+}
+
+div.map-articles {
+    overflow-y: scroll;
+    max-height: 200px;
+    width: 100%;
 }
 
